# pydanticops

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  setup.sh
bot/: auth.py  handlers.py  main.py
bridge/: docker_manager.py  filesystem.py  gpu_monitor.py  sglang_monitor.py
core/: executor.py  schemas.py  validator.py
hq_bot/: i18n.py  main.py
invisible-sysadmin/: pyproject.toml
osint/: log_scanner.py
protocol/: cat.py
tests/: test_cat.py  test_docker_manager.py  test_schemas.py
